bugfix bottom nav bar on iOS

--- a/css/app.css
+++ b/css/app.css
@@ -1,5 +1,10 @@
 /* GLOBAL */
-body { background-color: #ddd; }
+body { 
+  background-color: #ddd; 
+  height: 100%; /* allows content to fill the viewport and go beyond the bottom)*/
+  overflow-y: scroll; /* allows you to scroll below the viewport; the default value is visible) */
+  -webkit-overflow-scrolling: touch;
+}
 h1, h2, h3, h4, h5, h6, h7, p, a, ul, ol, table {
   font-family: 'Source Sans Pro', sans-serif;
   color: #444;
